# langchain_agents

./: .dockerignore  .flake8  .gitignore  docker-compose.yml  dockerfile  main.py  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
prototype/: translator.py
